--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "main": "app",
+
   "dependencies": {
     "express": "3.0.6",
     "jade": "*",
@@ -20,4 +21,14 @@
     "uglify-js" : "*",
     "active-x-obfuscator" : "*"
   }
-}
+  "devDependencies": {},
+  "bundleDependencies": [],
+
+  "engines": {
+    "node": ">= 0.8.0",
+    "npm": ">= 1.0.0"
+  },
+
+  "scripts": {
+   "start": "node server.js"
+  }}
