try to correctly start the server & added dependency versions

--- a/package.json
+++ b/package.json
@@ -6,20 +6,19 @@
 
   "dependencies": {
     "express": "3.0.6",
-    "jade": "*",
-    "baseview": "*",
-    "mongoose": "*",
-    "redis": "*",
-    "path": "*",
-    "async": "*",
-    "passport": "*",
-    "passport-local": "*",
-    "connect-flash": "*",
-    "redis" : "*",
-    "connect-redis" : "*",
-    "mime" : "*",
-    "uglify-js" : "*",
-    "active-x-obfuscator" : "*"
+    "jade": "0.28.1",
+    "baseview": "0.0.3",
+    "mongoose": "3.5.4",
+    "redis": "0.8.2",
+    "path": "0.4.9",
+    "async": "0.1.22",
+    "passport": "0.1.15",
+    "passport-local": "0.1.6",
+    "connect-flash": "0.1.0",
+    "connect-redis" : "1.4.5",
+    "mime" : "1.2.9",
+    "uglify-js" : "2.2.3",
+    "active-x-obfuscator" : "0.0.1"
   },
   "devDependencies": {},
   "bundleDependencies": [],
@@ -30,6 +29,6 @@
   },
 
   "scripts": {
-   "start": "node server.js"
+   "start": "node app.js"
   }
 }
