--- a/.openshift/action_hooks/build
+++ b/.openshift/action_hooks/build
@@ -5,11 +5,12 @@
 # could be python, php, ruby, etc.
 . ${OPENSHIFT_DATA_DIR}diy_env.sh
 cd ${OPENSHIFT_REPO_DIR}
-mkdir -p ${OPENSHIFT_DATA_DIR}node_modules
-rmdir node_modules
-ln -s ${OPENSHIFT_DATA_DIR}node_modules
-# normally one would not globally install everything, but this allows
-# for quicker pushes to rhc because it will not re-install everything in node_modules
+# link a 'permanent' node_modules from the data dir if node_modules is not 
+# checked into the project folder
+if [ ! -e ${OPENSHIFT_REPO_DIR}node_modules ]; then
+	mkdir -p ${OPENSHIFT_DATA_DIR}node_modules
+	ln -s ${OPENSHIFT_DATA_DIR}node_modules
+fi
 npm install
 # To keep node running if crashed
 npm install supervisor -g
