--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "connect-redis" : "1.4.5",
     "node-sass" : "0.2.6",
     "socket.io" : "*",
+    "underscore" : "1.4.4",
     "uglify-js-middleware" : "1.0.2",
     "mime" : "1.2.9",
     "uglify-js" : "2.2.3",
