--- a/package.json
+++ b/package.json
@@ -8,22 +8,19 @@
   	"coffee-script": "1.4.0",
     "express": "3.0.6",
     "jade": "0.28.1",
-    "baseview": "0.0.3",
     "mongoose": "3.5.4",
     "redis": "0.8.2",
     "socket.io" : "0.9.13",
     "path": "0.4.9",
-    "async": "0.1.22",
     "passport": "0.1.15",
     "passport-local": "0.1.6",
+    "passport.socketio": "1.0.1",
     "connect-flash": "0.1.0",
     "connect-redis" : "1.4.5",
     "connect-assets" : "2.3.3",
     "discount": "0.2.3",
     "less" : "1.3.3",
-    "underscore" : "1.4.4",
-    "mime" : "1.2.9",
-    "active-x-obfuscator" : "0.0.1"
+    "underscore" : "1.4.4"
   },
   "devDependencies": {},
   "bundleDependencies": [],
